# Fast

./: .gitignore  CMakeLists.txt  README.md  setup.py
Example/: Benchmark_Results.ipynb  Untitled.ipynb  benchmarker.py  example.py  wrapper_test.json  wrapper_test_float.json  wrapper_test_int.json
Example/.ipynb_checkpoints/: Benchmark_Results-checkpoint.ipynb  Untitled-checkpoint.ipynb
Example/Test_files/: wrapper_test_int2.json  wrapper_test_new.json
docs/: fullInstall.md
src/: module.cpp
src/fast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
